--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1,6 +1,3 @@
-body
-	background-color: $color-background
-
 a:hover
 	color: $color-primary
 
@@ -14,6 +11,7 @@ a:hover
 
 #header-bar
 	&-pri
+		background-color: $color-background-lighter
 		box-shadow: inset 0 -1px $color-background-dark
 		display: flex
 		align-items: center
@@ -170,6 +168,7 @@ ul.dropdown-menu
 .wgt-search input
 	padding-left: 10px
 	padding-right: 10px
+	box-shadow: none
 
 .emoji
 	height: 16px
